# muninn

./: .gitignore  LICENSE  README.md  flake.nix  muninn.cabal
app/: Main.hs
src/Muninn/: Formatter.hs  Parser.hs
src/Muninn/Formatter/: Config.hs  ConfigFile.hs  Expr.hs  Print.hs  Stmt.hs  Support.hs
src/Muninn/Parser/: AST.hs  JSON.hs  Lexer.hs  SrcLoc.hs
test/formatter/: Main.hs
test/parser/: Main.hs
test/parser/testgen/: json_expr.odin  json_stmt.odin
testgen/parser/: json_builder.odin  json_expr.odin  json_stmt.odin  json_support.odin  main.odin
tmp/: gzip.odin  limits.odin
