cabal-version:      3.0
name:               muninn
version:            0.0.0.1
homepage:           https://sr.ht/~cephei8/muninn
license:            MIT
license-file:       LICENSE
author:             cephei8
maintainer:         i@cephei8.dev
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-home-modules
                 -Wpartial-fields -Wredundant-constraints -Wunused-packages
                 -Werror

common extensions
    default-extensions: OverloadedStrings

library
    import:           warnings, extensions
    hs-source-dirs:   src
    exposed-modules:  Muninn.Parser
                    , Muninn.Parser.SrcLoc
                    , Muninn.Parser.Lexer
                    , Muninn.Parser.AST
                    , Muninn.Parser.JSON
                    , Muninn.Formatter
                    , Muninn.Formatter.Config
                    , Muninn.Formatter.ConfigFile
                    , Muninn.Formatter.Print
                    , Muninn.Formatter.Stmt
                    , Muninn.Formatter.Expr
    build-depends:    base ^>=4.20.2.0
                    , array
                    , containers
                    , text
                    , aeson
                    , megaparsec
                    , mtl
                    , directory
                    , filepath
    default-language: GHC2024

executable muninn
    import:           warnings, extensions
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0
                    , muninn
                    , optparse-applicative
                    , text
                    , bytestring
                    , aeson
                    , Diff
                    , directory
                    , filepath
    default-language: GHC2024

test-suite parser-test
    import:           warnings, extensions
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/parser
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0
                    , muninn
                    , tasty
                    , tasty-hunit
                    , bytestring
                    , aeson
                    , filepath
                    , directory
    default-language: GHC2024

test-suite formatter-test
    import:           warnings, extensions
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/formatter
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0
                    , muninn
                    , tasty
                    , tasty-hunit
                    , aeson
                    , aeson-pretty
                    , bytestring
                    , text
                    , vector
                    , filepath
                    , directory
                    , process
                    , temporary
    default-language: GHC2024
